--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-body{
-    height: 100hv;
-}
-
-.logo{
-    display: flex;
-    justify-content: flex-start;
-    height: 40px;
-    width: 40px;
-    background-color: #000;
-    margin: 10%;
+.main{
+    
 }
