--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .main{
     display: flex;
-    margin-top: 250px;
+    margin-top: 200px;
     margin-left: 400px;
 }
 
@@ -17,4 +17,7 @@
 
 .active{
     background-color: purple;
+}
+.hide {
+    display: none;
 }
