--- a/style.css
+++ b/style.css
@@ -1,23 +1,150 @@
-.main{
+html {
+    font-size: 16px;
+}
+
+body {
+    margin: 0;
     display: flex;
-    margin-top: 200px;
-    margin-left: 400px;
+    height: 100vh;
+    font-size: 1rem;
 }
 
-.link{
-    height: 500px;
-    padding: 10px;
-    background-color: aqua ;
+.wrapper {
+    width: 1000px;
+    margin: auto;
+    box-sizing: border-box;
+    border: 2px solid black;
 }
 
-.txt{
-    background-color:purple;
-    padding: 10px;
+header {
+    background: gray;
 }
 
-.active{
-    background-color: purple;
+header p {
+    font-size: 2.5rem;
 }
-.hide {
-    display: none;
+
+.top{
+    display: flex;
+    justify-content: space-around;
+    height: auto;
+    padding-bottom: 5px;
+    
+}
+
+.main {
+    display: flex;
+    height: 50vh;
+    background-color: rgb(105, 78, 117) ;
+}
+
+.block_left {
+    height: 50vh;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.item {
+    height: 6.25vh;
+    background: aquamarine;
+    text-align: center;
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+}
+
+.item8 {
+    background: grey;
+}
+
+
+
+.block_right {
+    height: 100%;
+    flex: 8;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.txt {
+    height: 100%;
+    position: relative;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.txt1 {
+    height: 100%;
+    width: 100%;
+    background: rgb(229, 180, 250);
+    position: absolute;
+    visibility: hidden;
+}
+
+.txt2 {
+    height: 100%;
+    width: 100%;
+    background: rgb(229, 180, 250);
+    position: absolute;
+    visibility: hidden;
+}
+
+.txt3 {
+    height: 100%;
+    width: 100%;
+    background: rgb(229, 180, 250);
+    position: absolute;
+    visibility: hidden;
+}
+
+.txt4 {
+    height: 100%;
+    width: 100%;
+    background: rgb(229, 180, 250);
+    position: absolute;
+    visibility: hidden;
+}
+
+.txt5 {
+    height: 100%;
+    width: 100%;
+    background: rgb(229, 180, 250);
+    position: absolute;
+    visibility: hidden;
+}
+
+.txt6 {
+    height: 100%;
+    width: 100%;
+    background: rgb(229, 180, 250);
+    position: absolute;
+    visibility: hidden;
+}
+
+.txt7 {
+    height: 100%;
+    width: 100%;
+    background: rgb(229, 180, 250);
+    position: absolute;
+    visibility: hidden;
+}
+
+p {
+    color: white;
+}
+
+
+@media only screen and (max-width: 750px) {
+    header p {
+        font-size: 1.5rem;
+    } 
+}
+
+@media only screen and (max-width: 450px) {
+    header p {
+        font-size: 1.2rem;
+    } 
 }
